examples/gke/tgi-from-gcs-deployment/config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tgi-deployment
  namespace: hf-gke-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tgi-server
  template:
    metadata:
      labels:
        app: tgi-server
        hf.co/model: Qwen--Qwen2-7B-Instruct
        hf.co/task: text-generation
    spec:
      serviceAccountName: hf-gke-service-account
      containers:
        - name: tgi-container
          image: us-docker.pkg.dev/deeplearning-platform-release/gcr.io/huggingface-text-generation-inference-cu121.2-2.ubuntu2204:latest
          resources:
            requests:
              nvidia.com/gpu: 1
          volumeMounts:
            - mountPath: /dev/shm
              name: dshm
            - mountPath: /data
              name: gcs-mount
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 1Gi
        - name: gcs-mount
          ephemeral:
            volumeClaimTemplate:
              spec:
                accessModes: [ "ReadWriteOnce" ]
                storageClassName: ssd
                resources:
                  requests:
                    storage: 48Gi
      nodeSelector:
        cloud.google.com/gke-accelerator: nvidia-l4
